# pyAscore

./: .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: linux-build.yml  mac-build.yml  publish.yml  unittest.yml  windows-build.yml
docs/: requirements.txt
docs/source/: cli.rst  conf.py  index.rst
docs/source/api/: index.rst  modified_peptides.rst  parsing.rst  scoring.rst
pyascore/: __init__.py  __main__.py  config.py
pyascore/parsing/: __init__.py  id_parsers.py  spec_parsers.py
pyascore/ptm_scoring/: Ascore.pxd  Ascore.pyx  ModifiedPeptide.pxd  ModifiedPeptide.pyx  PTMScoring.cpp  PTMScoring.pyx  Spectra.pxd  Spectra.pyx  Util.pxd  Util.pyx
pyascore/ptm_scoring/cpp/: Ascore.cpp  Ascore.h  ModifiedPeptide.cpp  ModifiedPeptide.h  Spectra.cpp  Spectra.h  Types.h  Util.cpp  Util.h
test/: test_ascore.py  test_id_parsers.py  test_modified_peptide_container.py  test_spec_parsers.py  test_spectra_container.py  test_util.py
test/example_inputs/psms/: test_psms.mzid  test_psms.pep.xml
test/example_inputs/spectra/: test_spectra.mzML  test_spectra.mzXML
test/match_spectra_pairs/: velos_matches_1_mods.pkl  velos_matches_2_mods.pkl  velos_matches_3_mods.pkl  velos_matches_aux.pkl  velos_spectra_1_mods.pkl  velos_spectra_2_mods.pkl  velos_spectra_3_mods.pkl  velos_spectra_aux.pkl
test/pyteomics_examples/mzml/: qexactive_mzml_examples.pkl  velos_mzml_examples.pkl
test/pyteomics_examples/pepxml/: comet_qexactive_pepxml_examples.pkl  comet_velos_pepxml_examples.pkl  percolator_qexactive_pepxml_examples.pkl  percolator_velos_pepxml_examples.pkl
