[metadata]
name = pyascore
version = 0.7
author = Anthony S. Barente
author_email = valenta4@uw.edu
description = A python module for fast post translational modification localization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnthonyOfSeattle/pyAscore
project_urls =
    Documentation = https://pyascore.readthedocs.io
    Bug Tracker = https://github.com/AnthonyOfSeattle/pyAscore/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic ::Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    pandas
    lxml
    tqdm
    pyteomics

[options.extras_require]
docs =
    sphinx-argparse
    sphinx-rtd-theme
    recommonmark
    numpydoc

[options.entry_points]
console_scripts =
    pyascore = pyascore.__main__:main
