[metadata]
name = pyascore
author = Anthony S. Barente
author_email = valenta4@uw.edu
description = A python module for fast post translational modification localization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnthonyOfSeattle/pyAscore
project_urls =
    Documentation = https://pyascore.readthedocs.io
    Bug Tracker = https://github.com/AnthonyOfSeattle/pyAscore/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.5
    scipy>=1.5.4
    pandas>=1.1.5
    tqdm>=4.64.0
    lxml>=4.8.0
    pyteomics>=4.5.3

[options.extras_require]
docs =
    sphinx-argparse>=0.2.5
    sphinx-rtd-theme>=0.5.0
    recommonmark>=0.5.0
    numpydoc>=1.0.0

[options.entry_points]
console_scripts =
    pyascore = pyascore.__main__:main
